--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-PyMuPDF==1.23.8
+fitz==0.0.1.dev2
+frontend==1.7.0
 python-multipart==0.0.6
-python-dotenv==1.0.0
